[gd_scene load_steps=5 format=3 uid="uid://fitf8i3intxt"]

[ext_resource type="Theme" uid="uid://b16mm2uf5waty" path="res://Big_Font.tres" id="1_ain2g"]
[ext_resource type="Script" path="res://prog_54c.gd" id="1_pupoo"]

[sub_resource type="Theme" id="Theme_ntklm"]
default_font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_pj4d7"]
font_size = 38

[node name="prog_54c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -1.0
offset_right = 16.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pupoo")

[node name="txtRadius" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 11.0
offset_right = 616.0
offset_bottom = 93.0
theme = SubResource("Theme_ntklm")

[node name="lblArea" type="Label" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 148.0
offset_right = 288.0
offset_bottom = 221.0
label_settings = SubResource("LabelSettings_pj4d7")
horizontal_alignment = 2

[node name="lblCircum" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 234.0
offset_right = 293.0
offset_bottom = 307.0
label_settings = SubResource("LabelSettings_pj4d7")
horizontal_alignment = 2

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 510.0
offset_right = 220.0
offset_bottom = 622.0
theme = ExtResource("1_ain2g")
text = "Calc"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 239.0
offset_top = 515.0
offset_right = 418.0
offset_bottom = 627.0
theme = ExtResource("1_ain2g")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 449.0
offset_top = 514.0
offset_right = 628.0
offset_bottom = 626.0
theme = ExtResource("1_ain2g")
text = "Exit"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 9.0
offset_right = 282.0
offset_bottom = 82.0
text = "Radius:"
label_settings = SubResource("LabelSettings_pj4d7")
horizontal_alignment = 2

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
